--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 DB_URL = postgresql://postgres:postgres@postgres:5432/postgres
 SECRET_KEY = "django-insecure-q&krc&pi$kukmy^sx$tv7om+&bzbd5hikn=rbjvd5-9@1)i&ex"
-DEBUG = True
+DEBUG = False
